bk_ida/gobmkida/c2/compute_primary_domains
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_primary_domains/src/engine/optics.c:962:7: error: use of undeclared identifier 'byte_9B388D'
v31 = byte_9B388D[v28]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_primary_domains/src/obj/1/optics.o] Error 1
